src/objects/Irradiated_Site__c.object
<CustomObject>
    <fields>
        <fullName>Dose_per_FX_cGy__c</fullName>
        <inlineHelpText>Enter Dose per FX( cGY )</inlineHelpText>
        <label>Dose per FX (cGy)</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Followup_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Followup Form</label>
        <referenceTo>Followup_Form__c</referenceTo>
        <relationshipLabel>Irradiated Sites</relationshipLabel>
        <relationshipName>Irradiated_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Laterality__c</fullName>
        <label>Laterality</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown/not indicated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <picklist>
            <picklistValues>
                <fullName>Breast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supraclavicular node</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal mammary node</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chest wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalFX__c</fullName>
        <formula>Dose_per_FX_cGy__c  *  Total_dose_cGy_AP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalFX</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_FX__c</fullName>
        <inlineHelpText>Enter Total #FX</inlineHelpText>
        <label>Total #FX</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_dose_cGy_AP__c</fullName>
        <label>Total dose (cGy)  AP</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pg_irraditedsite_Id__c</fullName>
        <label>pg_irraditedsite_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Irradiated Site</label>
    <nameField>
        <label>Irradiated Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Irradiated Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>